Intro Demography expanded

--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -72,7 +72,7 @@ As recombination breaks the introgressed chromosomal segments apart each generat
 
 
 ##The two approaches of obtaining the length of introgressed segments: searching for introgressd haplotypes
-The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012][@price_sensitive_2009][@lawson_inference_2012]. Multiple methodes are available focusing on different aspects of introgressed haplotypes to infer them [@lawson_inference_2012] [@racimo_signatures_2017][@seguin_orlando_paleogenomics._2014][@vernot_excavating_2016][@skov_detecting_2018]. In the second step, the length distribution of these directly infered introgressed haplotypes can be used for dating.
+The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012][@price_sensitive_2009][@lawson_inference_2012]. Multiple methodes are available focusing on different characteristics, such as LD patterns and density of derived variants, of introgressed haplotypes to infer them [@lawson_inference_2012] [@racimo_signatures_2017][@seguin_orlando_paleogenomics._2014][@vernot_excavating_2016][@skov_detecting_2018]. In the second step, the length distribution of these directly infered introgressed haplotypes can be used for dating.
 
 ##Dates of archaic introgression obtained so far
 The two approach were used to estimate the Neandertal human admixture to be 37,000–86,000 yBP [@sankararaman_date_2012] as well as 40,510–54,454 yBP (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 yBP using a ancient Genome[@fu_genome_2014]. An additional contemporaneous  admixture event between Neandertals and East Asian population was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015][@vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 yBP [@sankararaman_combined_2016]. Using Papuan individuals revealed two time separated admixture events one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differnces, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018][@jacobs_multiple_2019].
@@ -88,10 +88,12 @@ First, it is assumed that the length of the introgressed segments is independent
 Second, it is assumed that the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known. Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available. Either focusing on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008][@kong_fine-scale_2010] or searching for admixture tracts brakepoints [@hinch_landscape_2011][@wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004][@myers_fine-scale_2005][@hapmap_consortium_2007]. 
 The genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010][@hinch_landscape_2011]. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as pedigree based map to estimate the error in the map [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016].
 
-Third, the demography is known. Demographic events such like additional gene flow between the ancestral population and the admixed or deep structure in the ancestral population was previously reported to bias the estimates [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016]. 
+Third, the demography is known. Figure xx shows two possible demographies for the Neandertal admixture. These demographies can have an influence on admixture time estimates since demographic events can create false signals of archaic introgression. Various processes such as extrem reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure xx, can also introduce divergent chromosomal segment with variants in strong LD, mimicing Archaic introgressed segments [@nei_linkage_1973] [@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentialy influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
+<!-- also in [@sankararaman_combined_2016] ??? -->
+<!-- Not sure about the last sentece -->
 <!-- Explain demography using the figure -->
 
-An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012][@fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the actual introgressing population or being older than it, which might result in missing introgressed variants. 
+An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012][@fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced archaic individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the introgressing population, which might result in missing introgressed variants. 
 
 Finally, the admixture is assumed to happened in only a single generation. This assumption of pulse like events might be violated, since e.g. in the case of archaic and modern human admixture, populations overlapped in some regions  for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations.
 Expand:
