--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -70,6 +70,84 @@
 }
 
 
+@article{petr_limits_2019,
+	title = {Limits of long-term selection against Neandertal introgression},
+	volume = {116},
+	rights = {Copyright © 2019 the Author(s). Published by {PNAS}.. http://creativecommons.org/licenses/by/4.0/This open access article is distributed under Creative Commons Attribution License 4.0 ({CC} {BY}).},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/116/5/1639},
+	doi = {10.1073/pnas.1814338116},
+	abstract = {Several studies have suggested that introgressed Neandertal {DNA} was subjected to negative selection in modern humans. A striking observation in support of this is an apparent monotonic decline in Neandertal ancestry observed in modern humans in Europe over the past 45,000 years. Here, we show that this decline is an artifact likely caused by gene flow between modern human populations, which is not taken into account by statistics previously used to estimate Neandertal ancestry. When we apply a statistic that avoids assumptions about modern human demography by taking advantage of two high-coverage Neandertal genomes, we find no evidence for a change in Neandertal ancestry in Europe over the past 45,000 years. We use whole-genome simulations of selection and introgression to investigate a wide range of model parameters and find that negative selection is not expected to cause a significant long-term decline in genome-wide Neandertal ancestry. Nevertheless, these models recapitulate previously observed signals of selection against Neandertal alleles, in particular the depletion of Neandertal ancestry in conserved genomic regions. Surprisingly, we find that this depletion is strongest in regulatory and conserved noncoding regions and in the most conserved portion of protein-coding sequences.},
+	pages = {1639--1644},
+	number = {5},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {{PNAS}},
+	author = {Petr, Martin and Pääbo, Svante and Kelso, Janet and Vernot, Benjamin},
+	urldate = {2020-01-28},
+	date = {2019-01-29},
+	langid = {english},
+	pmid = {30647110},
+	keywords = {demography, introgression, modern human, Neandertal, selection},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/2HAX8A54/Petr et al. - 2019 - Limits of long-term selection against Neandertal i.pdf:application/pdf}
+}
+
+@article{schaper_linkage_2012,
+	title = {Linkage Disequilibrium Under Recurrent Bottlenecks},
+	volume = {190},
+	rights = {Copyright © 2012 by the Genetics Society of America},
+	issn = {0016-6731, 1943-2631},
+	url = {https://www.genetics.org/content/190/1/217},
+	doi = {10.1534/genetics.111.134437},
+	abstract = {To model deviations from selectively neutral genetic variation caused by different forms of selection, it is necessary to first understand patterns of neutral variation. Best understood is neutral genetic variation at a single locus. But, as is well known, additional insights can be gained by investigating multiple loci. The resulting patterns reflect the degree of association (linkage) between loci and provide information about the underlying multilocus gene genealogies. The statistical properties of two-locus gene genealogies have been intensively studied for populations of constant size, as well as for simple demographic histories such as exponential population growth and single bottlenecks. By contrast, the combined effect of recombination and sustained demographic fluctuations is poorly understood. Addressing this issue, we study a two-locus Wright–Fisher model of a population subject to recurrent bottlenecks. We derive coalescent approximations for the covariance of the times to the most recent common ancestor at two loci in samples of two chromosomes. This covariance reflects the degree of association and thus linkage disequilibrium between these loci. We find, first, that an effective population-size approximation describes the numerically observed association between two loci provided that recombination occurs either much faster or much more slowly than the population-size fluctuations. Second, when recombination occurs frequently between but rarely within bottlenecks, we observe that the association of gene histories becomes independent of physical distance over a certain range of distances. Third, we show that in this case, a commonly used measure of linkage disequilibrium, {\textless}img class="highwire-embed" alt="Embedded Image" src="https://www.genetics.org/sites/default/files/highwire/genetics/190/1/217/embed/mml-math-1.gif"/{\textgreater} (closely related to {\textless}img class="highwire-embed" alt="Embedded Image" src="https://www.genetics.org/sites/default/files/highwire/genetics/190/1/217/embed/mml-math-2.gif"/{\textgreater}), fails to capture the long-range association between two loci. The reason is that constituent terms, each reflecting the long-range association, cancel. Fourth, we analyze a limiting case in which the long-range association can be described in terms of a Xi coalescent allowing for simultaneous multiple mergers of ancestral lines.},
+	pages = {217--229},
+	number = {1},
+	journaltitle = {Genetics},
+	author = {Schaper, E. and Eriksson, A. and Rafajlovic, M. and Sagitov, S. and Mehlig, B.},
+	urldate = {2020-01-28},
+	date = {2012-01-01},
+	langid = {english},
+	pmid = {22048021},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/XN9MWUAP/Schaper et al. - 2012 - Linkage Disequilibrium Under Recurrent Bottlenecks.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/59TKKUEM/217.html:text/html}
+}
+
+
+@article{nei_linkage_1973,
+	title = {Linkage Disequilibrium in Subdivided Populations},
+	volume = {75},
+	issn = {0016-6731, 1943-2631},
+	url = {https://www.genetics.org/content/75/1/213},
+	abstract = {The linkage disequilibrium in a subdivided populaton is shown to be equal to the sum of the average linkage disequilibrium for all subpopulations and the covariance between gene frequencies of the loci concerned. Thus, in a subdivided population the linkage disequilibrium may not be 0 even if the linkage disequilibrium in each subpopulation is 0. If a population is divided into two subpopulations between which migration occurs, the asymptotic rate of approach to linkage equilibrium is equal to either r or 2(m1 + m2) - (m1 + m2)2, whichever is smaller, where r is the recombination value and m1 and m2 are the proportions of immigrants in subpopulations 1 and 2, respectively. Thus, if migration rate is high compared with recombination value, the change of linkage disequilibrium in subdivided populations is similar to that of a single random mating population. On the other hand, if migration rate is low, the approach to lnkage equilibrium may be retarded in subdivided populations. If isolated populations begin to exchange genes by migration, linkage disequilibrium may increase temporarily even for neutral loci. If overdominant selection operates and the equilibrium gene frequencies are different in the two subpopulations, a permanent linkage disequilibrium may be produced without epistasis in each subpopulation.},
+	pages = {213--219},
+	number = {1},
+	journaltitle = {Genetics},
+	author = {Nei, Masatoshi and Li, Wen-Hsiung},
+	urldate = {2020-01-28},
+	date = {1973-09-01},
+	langid = {english},
+	pmid = {4762877},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/QZCNB365/Nei and Li - 1973 - Linkage Disequilibrium in Subdivided Populations.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/J6LYJDVJ/213.html:text/html}
+}
+
+
+@article{pfaff_population_2001,
+	title = {Population Structure in Admixed Populations: Effect of Admixture Dynamics on the Pattern of Linkage Disequilibrium},
+	volume = {68},
+	issn = {0002-9297},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1234913/},
+	shorttitle = {Population Structure in Admixed Populations},
+	abstract = {Gene flow between genetically distinct populations creates linkage disequilibrium (admixture linkage disequilibrium [{ALD}]) among all loci (linked and unlinked) that have different allele frequencies in the founding populations. We have explored the distribution of {ALD} by using computer simulation of two extreme models of admixture: the hybrid-isolation ({HI}) model, in which admixture occurs in a single generation, and the continuous-gene-flow ({CGF}) model, in which admixture occurs at a steady rate in every generation. Linkage disequilibrium patterns in African American population samples from Jackson, {MS}, and from coastal South Carolina resemble patterns observed in the simulated {CGF} populations, in two respects. First, significant association between two loci ({FY} and {AT}3) separated by 22 {cM} was detected in both samples. The retention of {ALD} over relatively large ({\textgreater}10 {cM}) chromosomal segments is characteristic of a {CGF} pattern of admixture but not of an {HI} pattern. Second, significant associations were also detected between many pairs of unlinked loci, as observed in the {CGF} simulation results but not in the simulated {HI} populations. Such a high rate of association between unlinked markers in these populations could result in false-positive linkage signals in an admixture-mapping study. However, we demonstrate that by conditioning on parental admixture, we can distinguish between true linkage and association resulting from shared ancestry. Therefore, populations with a {CGF} history of admixture not only are appropriate for admixture mapping but also have greater power for detection of linkage disequilibrium over large chromosomal regions than do populations that have experienced a pattern of admixture more similar to the {HI} model, if methods are employed that detect and adjust for disequilibrium caused by continuous admixture.},
+	pages = {198--207},
+	number = {1},
+	journaltitle = {American Journal of Human Genetics},
+	shortjournal = {Am J Hum Genet},
+	author = {Pfaff, C. L. and Parra, E. J. and Bonilla, C. and Hiester, K. and {McKeigue}, P. M. and Kamboh, M. I. and Hutchinson, R. G. and Ferrell, R. E. and Boerwinkle, E. and Shriver, M. D.},
+	urldate = {2020-01-28},
+	date = {2001-01},
+	pmid = {11112661},
+	pmcid = {PMC1234913},
+	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/9D4WD87E/Pfaff et al. - 2001 - Population Structure in Admixed Populations Effec.pdf:application/pdf}
+}
+
 @article{auton_fine-scale_2012,
 	title = {A Fine-Scale Chimpanzee Genetic Map from Population Sequencing},
 	volume = {336},
