including draft Intro figure

--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -88,7 +88,7 @@ First, it is assumed that the length of the introgressed segments is independent
 Second, it is assumed that the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known. Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available. Either focusing on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008][@kong_fine-scale_2010] or searching for admixture tracts brakepoints [@hinch_landscape_2011][@wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004][@myers_fine-scale_2005][@hapmap_consortium_2007]. 
 The genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010][@hinch_landscape_2011]. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as pedigree based map to estimate the error in the map [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016].
 
-Third, the demography is known. Figure xx shows two possible demographies for the Neandertal admixture. These demographies can have an influence on admixture time estimates since demographic events can create false signals of archaic introgression. Various processes such as extrem reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure xx, can also introduce divergent chromosomal segment with variants in strong LD, mimicing Archaic introgressed segments [@nei_linkage_1973] [@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentialy influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
+Third, the demography is known. Figure \ref{fig:Into_fig} shows two possible demographies for the Neandertal admixture. These demographies can have an influence on admixture time estimates since demographic events can create false signals of archaic introgression. Various processes such as extrem reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure xx, can also introduce divergent chromosomal segment with variants in strong LD, mimicing Archaic introgressed segments [@nei_linkage_1973] [@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentialy influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
 <!-- also in [@sankararaman_combined_2016] ??? -->
 <!-- Not sure about the last sentece -->
 <!-- Explain demography using the figure -->
@@ -103,7 +103,15 @@ Expand:
 
 This study aims to evaluate admixture time estimates, whereby we focus on a well studied example of archaic admixture into modern humans. Those admixture events are long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We are particularly interested in scenarios of long continuous gene flow between archaic and human populations and its signals in the ALD distribution. We introduce a model for continuous admixture, where the migration rate over time is gamma distributed with two parameter, one for the mean time of continuous admixture and one for the duration of the admixture. First, we examining the effect of long continuous admixture on the admixture time estimates in comparison to the effects of the aforementioned model assumptions. Therefore, we quantitatively evaluate the effect of the admixture model, recombination, demography and analysis parameters on the inference. Second, we define the expectation of the resulting segment length distribution for continuous gama distributed admixtue being Lomax distributed, holding a parameter for the duration of admixture. This expectation works for both methods to infer the segments length, either directly or by using the ALD decay. Using this model, we investigate under which scenarios the parameters of the Lomax-distribution can be  accurately  estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. Together this critically evaluates the current state of knowledge about different aspects of archaic admixture time.
 
-![Introduction Figure](/home/leonardo_iasi/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Paper_Graphics.pdf)
+<!-- ![Introduction Figure](/home/leonardo_iasi/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Paper_Graphics.pdf) -->
+
+``````{r Into_fig,message=FALSE, echo=FALSE,warning=FALSE,fig.align="center",fig.pos="H",fig.cap="\\label{fig:Into_fig} A) Direct and ALD approach B) Demographic scanarios"}
+library(png)
+#Intro_Fig <- readPNG('Paper_Graphics.png',native = T,info = T)
+include_graphics(path = 'Paper_Graphics.png',auto_pdf = T)
+
+```
+
 
 #Methods
 
