Continuous admixture model ref included

--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -70,6 +70,67 @@
 }
 
 
+@article{pickrell_ancient_2014,
+	title = {Ancient west Eurasian ancestry in southern and eastern Africa},
+	volume = {111},
+	rights = {©  . Freely available online through the {PNAS} open access option.},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/111/7/2632},
+	doi = {10.1073/pnas.1313787111},
+	abstract = {The history of southern Africa involved interactions between indigenous hunter–gatherers and a range of populations that moved into the region. Here we use genome-wide genetic data to show that there are at least two admixture events in the history of Khoisan populations (southern African hunter–gatherers and pastoralists who speak non-Bantu languages with click consonants). One involved populations related to Niger–Congo-speaking African populations, and the other introduced ancestry most closely related to west Eurasian (European or Middle Eastern) populations. We date this latter admixture event to ∼900–1,800 y ago and show that it had the largest demographic impact in Khoisan populations that speak Khoe–Kwadi languages. A similar signal of west Eurasian ancestry is present throughout eastern Africa. In particular, we also find evidence for two admixture events in the history of Kenyan, Tanzanian, and Ethiopian populations, the earlier of which involved populations related to west Eurasians and which we date to ∼2,700–3,300 y ago. We reconstruct the allele frequencies of the putative west Eurasian population in eastern Africa and show that this population is a good proxy for the west Eurasian ancestry in southern Africa. The most parsimonious explanation for these findings is that west Eurasian ancestry entered southern Africa indirectly through eastern Africa.},
+	pages = {2632--2637},
+	number = {7},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {{PNAS}},
+	author = {Pickrell, Joseph K. and Patterson, Nick and Loh, Po-Ru and Lipson, Mark and Berger, Bonnie and Stoneking, Mark and Pakendorf, Brigitte and Reich, David},
+	urldate = {2020-01-30},
+	date = {2014-02-18},
+	langid = {english},
+	pmid = {24550290},
+	keywords = {population genetics, migration, prehistory},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/549LQBH6/Pickrell et al. - 2014 - Ancient west Eurasian ancestry in southern and eas.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/LEIC72ZR/2632.html:text/html}
+}
+
+
+@article{zhou_inference_2017,
+	title = {Inference of multiple-wave population admixture by modeling decay of linkage disequilibrium with polynomial functions},
+	volume = {118},
+	rights = {2017 The Genetics Society Macmillan Publishers Limited, part of Springer Nature.},
+	issn = {1365-2540},
+	url = {https://www.nature.com/articles/hdy20175},
+	doi = {10.1038/hdy.2017.5},
+	abstract = {To infer the histories of population admixture, one important challenge with methods based on the admixture linkage disequilibrium ({ALD}) is to remove the effect of source {LD} ({SLD}), which is directly inherited from source populations. In previous methods, only the decay curve of weighted {LD} between pairs of sites whose genetic distance were larger than a certain starting distance was fitted by single or multiple exponential functions, for the inference of recent single- or multiple-wave admixture. However, the effect of {SLD} has not been well defined and no tool has been developed to estimate the effect of {SLD} on weighted {LD} decay. In this study, we defined the {SLD} in the formularized weighted {LD} statistic under the two-way admixture model and proposed a polynomial spectrum (p-spectrum) to study the weighted {SLD} and weighted {LD}. We also found that reference populations could be used to reduce the {SLD} in weighted {LD} statistics. We further developed a method, {iMAAPs}, to infer multiple-wave admixture by fitting {ALD} using a p-spectrum. We evaluated the performance of {iMAAPs} under various admixture models in simulated data and applied {iMAAPs} to the analysis of genome-wide single nucleotide polymorphism data from the Human Genome Diversity Project and the {HapMap} Project. We showed that {iMAAPs} is a considerable improvement over other current methods and further facilitates the inference of histories of complex population admixtures.},
+	pages = {503--510},
+	number = {5},
+	journaltitle = {Heredity},
+	shortjournal = {Heredity},
+	author = {Zhou, Y. and Yuan, K. and Yu, Y. and Ni, X. and Xie, P. and Xing, E. P. and Xu, S.},
+	urldate = {2020-01-30},
+	date = {2017-05},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/WCH8Z32M/Zhou et al. - 2017 - Inference of multiple-wave population admixture by.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/3Q54XBA2/hdy20175.html:text/html}
+}
+
+
+@article{zhou_modeling_2017,
+	title = {Modeling Continuous Admixture Using Admixture-Induced Linkage Disequilibrium},
+	volume = {7},
+	rights = {2017 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/srep43054},
+	doi = {10.1038/srep43054},
+	abstract = {Recent migrations and inter-ethnic mating of long isolated populations have resulted in genetically admixed populations. To understand the complex population admixture process, which is critical to both evolutionary and medical studies, here we used admixture induced linkage disequilibrium ({LD}) to infer continuous admixture events, which is common for most existing admixed populations. Unlike previous studies, we expanded the typical continuous admixture model to a more general scenario with isolation after a certain duration of continuous gene flow. Based on the new models, we developed a method, {CAMer}, to infer the admixture history considering continuous and complex demographic process of gene flow between populations. We evaluated the performance of {CAMer} by computer simulation and further applied our method to real data analysis of a few well-known admixed populations.},
+	pages = {1--10},
+	number = {1},
+	journaltitle = {Scientific Reports},
+	shortjournal = {Sci Rep},
+	author = {Zhou, Ying and Qiu, Hongxiang and Xu, Shuhua},
+	urldate = {2020-01-30},
+	date = {2017-02-23},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/TITXRJ47/Zhou et al. - 2017 - Modeling Continuous Admixture Using Admixture-Indu.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/XJRLBQHU/srep43054.html:text/html}
+}
+
 @article{petr_limits_2019,
 	title = {Limits of long-term selection against Neandertal introgression},
 	volume = {116},
@@ -1323,7 +1384,7 @@ Ancestral Neandertal sequences within extant humans reveal that positive and pur
 	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/I76MGWIV/Racimo et al. - 2017 - Signatures of Archaic Adaptive Introgression in Pr.pdf:application/pdf}
 }
 
-@article{seguin_orlando_paleogenomics._2014,
+@article{seguin_orlando_paleogenomics_2014,
 	title = {Paleogenomics. {Genomic} structure in {Europeans} dating back at least 36,200 years},
 	volume = {346},
 	issn = {1095-9203},
