--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -55,11 +55,11 @@ text-align: justify}
 
 #Introduction
 
-Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of  populations. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010][@prufer_complete_2013][@fu_early_2015][@fu_genome_2014][@sankararaman_genomic_2014], as well as an independent admixture event between Denisovans and Asian populations[@reich_genetic_2010][@meyer_high-coverage_2012][@sankararaman_combined_2016][@vernot_excavating_2016]. 
+Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of  populations. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014], as well as an independent admixture event between Denisovans and Asian populations[@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
 
 
 ##Admixture on the genomic level and basic idea how to date it
-On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003]. Under a constant recombination rate, the length of introgressed segments should be inversibly proportional to time since the admixture event. Assuming the recombination events occuring according to a poisson process, the fragment length distribution can be approximated by an exponential distribution, holding the number of generations since the fragments entered the admixing population [@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments can be used to inferre the time since the admixture event, also known as the recombination clock [@pool_inference_2009][@gravel_population_2012]. 
+On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003] (Figure \ref{fig:Into_fig} A). Under a constant recombination rate, the length of introgressed segments should be inversibly proportional to time since the admixture event. Assuming the recombination events occuring according to a poisson process, the fragment length distribution can be approximated by an exponential distribution, holding the number of generations since the fragments entered the admixing population [@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments can be used to inferre the time since the admixture event, also known as the recombination clock [@pool_inference_2009; @gravel_population_2012]. 
 <!-- Introduce model assumptions here -->
 <!-- constant recombination rate -->
 <!-- same ancestor -->
@@ -67,45 +67,54 @@ On the genomic level, admixture introduces highly divergent chromosomal segments
 
 ##The two approaches of obtaining the length of introgressed segments: ALD
 The dating of admixture events is a question of great interrest. The challenge here is to correctly infer the length of the introgressed segments. There are two main approaches to date admixture [@chimusa_dating_nodate]. The first approach uses the admixture-induced linkage disequilibrium (ALD) decay. 
-Gene flow introduces highly divergent archaic segments into the human background. Hence, variants on these archaic segments are expected to be in high linkage disequilibrium to eachother at the time of admixture [@chakraborty_admixture_1988][@stephens_mapping_1994][@wall_detecting_2000]. 
-As recombination breaks the introgressed chromosomal segments apart each generation, the association between variants on these introgressed segments decays as genetic distance increases. In case of a recent admixture event, ALD is found over long genetic distances [@patterson_methods_2004] and is therefore easy distinguishable from short range non-ALD [@moorjani_history_2011]. For ancient admixture however, a pairwise LD between introgressed variants is calculated using an ascerteinment scheme to filter for the introgressed variants in the admixed population, since LD fomr admixture and LD from other processes is in a similar range length [@sankararaman_date_2012]. The pairwise LD as a function of genetic distant is then fitted using an exponential distribution holding a point estimate for the time since the admixture event [@moorjani_history_2011][@loh_inferring_2013]. 
+Gene flow introduces highly divergent archaic segments into the human background. Hence, variants on these archaic segments are expected to be in high linkage disequilibrium to eachother at the time of admixture [@chakraborty_admixture_1988; @stephens_mapping_1994; @wall_detecting_2000]. 
+As recombination breaks the introgressed chromosomal segments apart each generation, the association between variants on these introgressed segments decays as genetic distance increases. In case of a recent admixture event, ALD is found over long genetic distances [@patterson_methods_2004] and is therefore easy distinguishable from short range non-ALD [@moorjani_history_2011]. For ancient admixture however, a pairwise LD between introgressed variants is calculated using an ascerteinment scheme to filter for the introgressed variants in the admixed population, since LD fomr admixture and LD from other processes is in a similar range length [@sankararaman_date_2012]. The pairwise LD as a function of genetic distant is then fitted using an exponential distribution holding a point estimate for the time since the admixture event [@moorjani_history_2011; @loh_inferring_2013]. 
 
 
 ##The two approaches of obtaining the length of introgressed segments: searching for introgressd haplotypes
-The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012][@price_sensitive_2009][@lawson_inference_2012]. Multiple methodes are available focusing on different characteristics, such as LD patterns and density of derived variants, of introgressed haplotypes to infer them [@lawson_inference_2012] [@racimo_signatures_2017][@seguin_orlando_paleogenomics._2014][@vernot_excavating_2016][@skov_detecting_2018]. In the second step, the length distribution of these directly infered introgressed haplotypes can be used for dating.
+The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012; @price_sensitive_2009; @lawson_inference_2012]. Multiple methodes are available focusing on different characteristics, such as LD patterns and density of derived variants, of introgressed haplotypes to infer them [@lawson_inference_2012; @racimo_signatures_2017; @seguin_orlando_paleogenomics_2014; @vernot_excavating_2016; @sankararaman_combined_2016; @skov_detecting_2018]. In the second step, the length distribution of these directly infered introgressed haplotypes can be used for dating.
 
 ##Dates of archaic introgression obtained so far
-The two approach were used to estimate the Neandertal human admixture to be 37,000–86,000 yBP [@sankararaman_date_2012] as well as 40,510–54,454 yBP (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 yBP using a ancient Genome[@fu_genome_2014]. An additional contemporaneous  admixture event between Neandertals and East Asian population was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015][@vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 yBP [@sankararaman_combined_2016]. Using Papuan individuals revealed two time separated admixture events one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differnces, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018][@jacobs_multiple_2019].
+The two approach were used to estimate the Neandertal human admixture to be 37,000–86,000 yBP [@sankararaman_date_2012] as well as 40,510–54,454 yBP (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 yBP using a ancient Genome[@fu_genome_2014]. An additional contemporaneous  admixture event between Neandertals and East Asian population was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 yBP [@sankararaman_combined_2016]. Using Papuan individuals revealed two time separated admixture events one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differnces, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019].
 
 ##Assumptions on the data
-Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER program [@loh_inferring_2013], typically require fairly strong assumptions on the data[@pool_inference_2009][@gravel_population_2012][@liang_lengths_2014].
+Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER program [@loh_inferring_2013], typically require fairly strong assumptions on the data[@pool_inference_2009; @gravel_population_2012; @liang_lengths_2014].
 
+### Segments are is independent and identically exponentially distributed
 First, it is assumed that the length of the introgressed segments is independent and identically exponentially distributed. This means that the number of ancestors per admixed individual is identical, such that the proportion of introgressed segments is equal among the individuals. Segments are independent such that segments of the same ancestor do not recombine to form longer segments. Liang and Nielsen 2014 showed that the  violation of the independent and identically exponentially distributed segments length assumption can downward bias admixture time estimates when the true admixture time is very  recent, the number of ancestors is small or the admixing population is small. This increases the chance of admixture segments to recombine into a larger segment mimicking a segment length distribution of a more recent admixture[@liang_lengths_2014].
 <!-- Disentengel model and data assumptions -->
 <!-- Pool and Nielsen assumption: no significant inbreeding tracts are rare (no recombination with eachother) -->
 <!-- Gravel 2012: tracts from multiple migrant ancestors -->
 
-Second, it is assumed that the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known. Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available. Either focusing on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008][@kong_fine-scale_2010] or searching for admixture tracts brakepoints [@hinch_landscape_2011][@wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004][@myers_fine-scale_2005][@hapmap_consortium_2007]. 
-The genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010][@hinch_landscape_2011]. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as pedigree based map to estimate the error in the map [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016].
+### Recombination Map
+Second, it is assumed that the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known. Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available. Either focusing on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008; @kong_fine-scale_2010] or searching for admixture tracts brakepoints [@hinch_landscape_2011; @wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004; @myers_fine-scale_2005; @hapmap_consortium_2007]. 
+The genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010; @hinch_landscape_2011]. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as pedigree based map to estimate the error in the map [@sankararaman_date_2012; @fu_genome_2014; @sankararaman_combined_2016].
 
-Third, the demography is known. Figure \ref{fig:Into_fig} shows two possible demographies for the Neandertal admixture. These demographies can have an influence on admixture time estimates since demographic events can create false signals of archaic introgression. Various processes such as extrem reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure xx, can also introduce divergent chromosomal segment with variants in strong LD, mimicing Archaic introgressed segments [@nei_linkage_1973] [@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentialy influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
-<!-- also in [@sankararaman_combined_2016] ??? -->
-<!-- Not sure about the last sentece -->
+### Demography
+Third, the demography is known. Figure \ref{fig:Into_fig} B shows two possible demographies for the Neandertal admixture, a simplified one without no population changes and a more complex one inclding structured populations, bottlenecks and additional gene flow. These demographies can have an influence on admixture time estimates since demographic events can create false signals of archaic introgression. Various processes such as extrem reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure \ref{fig:Into_fig} B, can also introduce divergent chromosomal segment with variants in strong LD, mimicing Archaic introgressed segments [@nei_linkage_1973]; @pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentialy influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
+<!-- Not sure about the last sentence -->
 <!-- Explain demography using the figure -->
 
-An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012][@fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced archaic individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the introgressing population, which might result in missing introgressed variants. 
+### Ascertainment
+An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012; @fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced archaic individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the introgressing population, which might result in missing introgressed variants. 
+<!-- What to cite for the last sentence?? -->
 
-Finally, the admixture is assumed to happened in only a single generation. This assumption of pulse like events might be violated, since e.g. in the case of archaic and modern human admixture, populations overlapped in some regions  for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations.
-Expand:
+### Pulse model
+Finally, the admixture is assumed to happened in only a single generation. This single pulse is mathematically convinient since all the introgressed segments entering in this single generation can be modeled using a single exponential distribution. This however limits the information gained form the dating since in case of a multi generation long admixture the single-pulse model results in a mean admixture time between start end end of the gene flow. Idealy one would like to obtaine the start and end, hence the duration of admixture between Neandertals and non-African populations. This could hold implications about the contact between Neandertals and modern humans, e.g. was gene flow a one isolated incident or common over the whole time of their co-existance. Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations.
+If admixture is happening over $n$ generations this results in a mixture of $n$ different exponential distribution one for each set of introgressed segments per generation [@pickrell_ancient_2014].  Previous studies tried to model this, using the ALD, by assuming not a continuous admixture but summaryzing it into different independent events. In this case, the decay curve is comprised out of $n$ different exponential terms, each for one admixture event [@pickrell_ancient_2014; @zhou_inference_2017]. Methods were introduced to model continuous admixture using a polynomial function with the number of coefficients related to the number of generations of continuous admixture [@zhou_modeling_2017]. These models however work best with recent admixture, in the last 100 generations, with a substential admixture proportion of around 0.3 [@zhou_modeling_2017]. This is outsode of the range for scenarios of Neandertal admixture, were the admixture proportion is around 0.03 and the timing around 1500 generations ago [@sankararaman_date_2012;@prufer_complete_2013;@sankararaman_genomic_2014].
+
+<!-- This assumption of pulse like events might be violated, since e.g. in the case of archaic and modern human admixture, populations overlapped in some regions  for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. -->
+
+<!-- Expand: -->
 <!-- why is single pulse used (mathematically easy) -->
 <!-- what do we want to know (start and end of the admixture) -->
+<!-- -tested on simulations with no changes in Ne, Admixture proportion of 30% and uniform recombnation [@zhou_modeling_2017]-->
 <!-- are there such models -->
 
-This study aims to evaluate admixture time estimates, whereby we focus on a well studied example of archaic admixture into modern humans. Those admixture events are long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We are particularly interested in scenarios of long continuous gene flow between archaic and human populations and its signals in the ALD distribution. We introduce a model for continuous admixture, where the migration rate over time is gamma distributed with two parameter, one for the mean time of continuous admixture and one for the duration of the admixture. First, we examining the effect of long continuous admixture on the admixture time estimates in comparison to the effects of the aforementioned model assumptions. Therefore, we quantitatively evaluate the effect of the admixture model, recombination, demography and analysis parameters on the inference. Second, we define the expectation of the resulting segment length distribution for continuous gama distributed admixtue being Lomax distributed, holding a parameter for the duration of admixture. This expectation works for both methods to infer the segments length, either directly or by using the ALD decay. Using this model, we investigate under which scenarios the parameters of the Lomax-distribution can be  accurately  estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. Together this critically evaluates the current state of knowledge about different aspects of archaic admixture time.
+Here we aim to evaluate admixture time estimates, whereby we focus on a well studied example of archaic admixture into modern humans. Those admixture events are assumed to be long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We are particularly interested in scenarios of long continuous gene flow between archaic and human populations and its signals in the ALD distribution. We introduce a model for continuous admixture, where the migration rate over time is gamma distributed with two parameter, one for the mean time of continuous admixture and one for the duration of the admixture. First, we examining the effect of long continuous admixture on the admixture time estimates in comparison to the effects of the aforementioned model assumptions. Therefore, we quantitatively evaluate the effect of the admixture model, recombination, demography and analysis parameters on the inference. Second, we define the expectation of the resulting segment length distribution for continuous gama distributed admixtue being Lomax distributed, holding a parameter for the duration of admixture. This expectation works for both methods to infer the segments length, either directly or by using the ALD decay. Using this model, we investigate under which scenarios the parameters of the Lomax-distribution can be  accurately  estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. Together this critically evaluates the current state of knowledge about different aspects of archaic admixture time.
 
-<!-- ![Introduction Figure](/home/leonardo_iasi/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Paper_Graphics.pdf) -->
 
-``````{r Into_fig,message=FALSE, echo=FALSE,warning=FALSE,fig.align="center",fig.pos="H",fig.cap="\\label{fig:Into_fig} A) Direct and ALD approach B) Demographic scanarios"}
+``````{r Into_fig,message=FALSE, echo=FALSE,warning=FALSE,fig.align="center",out.width="85%",fig.pos="H",fig.cap="\\label{fig:Into_fig} A) Direct and ALD approach B) Demographic scanarios"}
 library(png)
 #Intro_Fig <- readPNG('Paper_Graphics.png',native = T,info = T)
 include_graphics(path = 'Paper_Graphics.png',auto_pdf = T)
